Fixed the headers Light Mode vs. Dark Mode.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
 body {
-  font-family: "Open Sans";
+  font-family: "Fuzzy Bubbles", cursive;
+  font-family: "Open Sans", sans-serif;
+  @import "App";
 }
